third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/local-datetime/time-no-leads.stderr
TOML parse error at line 2, column 15
  |
2 | d = 2023-10-01T1:32:00Z
  |               ^
expected newline, `#`
